add image folder and sites.html

--- a/site/site.html
+++ b/site/site.html
@@ -1,9 +1,32 @@
-<html> 
-<head>
-  <title>My Coursera Page!</title>
-</head>
-<body>
-  <h1>This is a home page</h1>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>My page</title>
+    </head>
+   <body>
+     <h1>Welcome!</h1>
+     <section>
+      <h2>How to fall in love</h2>
+      <ol>
+         <li> Get a shovel.</li> 
+         <li> Dig a hole.</li>
+         <li> Name it love.</li>
+         <li> Fall in love.</li>
+      </ol>
+      <img src="images/cat-hole.gif" alt="" style="width: 200px; height: 150px; " >
 
+      <a href="https://www.youtube.com/watch?v=Dg0IjOzopYU&t=1414s"
+        target="_blank"  title="">
+        <div>
+        Heres a link to increase your sorrows
+       </div>
+      </a>
+      <h2>have fun ;)</h2>
+    </section>
+     
+    <footer>
+      
+    </footer>
+   </body>
 </html>
