modified site.html and added stylesheet

--- a/site/site.html
+++ b/site/site.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>My page</title>
+    <link rel="stylesheet" href="styles.css">
     </head>
    <body>
-     <h1>Welcome!</h1>
+     <h1>La douleur exquise </h1>
      <section>
       <h2>How to fall in love</h2>
       <ol>
-         <li> Get a shovel.</li> 
-         <li> Dig a hole.</li>
-         <li> Name it love.</li>
-         <li> Fall in love.</li>
+         <li>Step 1: Get a shovel.</li> 
+         <li>Step 2: Dig a hole.</li>
+         <li>Step 3: Name it love.</li>
+         <li>Step 4: Fall in love.</li>
       </ol>
       <img src="images/cat-hole.gif" alt="" style="width: 200px; height: 150px; " >
 
@@ -22,11 +23,11 @@
         Heres a link to increase your sorrows
        </div>
       </a>
-      <h2>have fun ;)</h2>
+      <h2 class="have fun">have fun ;)</h2>
     </section>
      
     <footer>
-      
+
     </footer>
    </body>
 </html>
