added reset stylesheet

--- a/site/site.html
+++ b/site/site.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My page</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     </head>
    <body>
@@ -11,11 +12,13 @@
       <h2>How to fall in love</h2>
       <ol>
          <li>Step 1: Get a shovel.</li> 
-         <li>Step 2: Dig a hole.</li>
+         <li>Step 2: Dig a hole.
+          <img src="https://media0.giphy.com/media/2BeTvr3bG3TISTYSCC/giphy.gif?cid=ecf05e47c0dc9hqp8ita4s8awoz5gghgnagw2q9d1h5n95h4&rid=giphy.gif&ct=g"
+           alt="" style="width:100px; height:100px;"></li>
          <li>Step 3: Name it love.</li>
          <li>Step 4: Fall in love.</li>
       </ol>
-      <img src="images/cat-hole.gif" alt="" style="width: 200px; height: 150px; " >
+      <img src="https://c.tenor.com/BlUilcJkhK0AAAAC/cat-fall.gif" alt="" style="width: 200px; height: 150px; " >
 
       <a href="https://www.youtube.com/watch?v=Dg0IjOzopYU&t=1414s"
         target="_blank"  title="">
@@ -23,11 +26,14 @@
         Heres a link to increase your sorrows
        </div>
       </a>
+      
+    </section>
+    <section>
       <h2 class="have fun">have fun ;)</h2>
     </section>
      
     <footer>
-
+       &copy;
     </footer>
    </body>
 </html>
