--- a/site/site.html
+++ b/site/site.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" href="styles.css">
     </head>
    <body>
-     <h1>La douleur exquise </h1>
-     <section>
+    <header>
+      <h1 class="title"> La douleur exquise </h1>
+    </header>
+    
+    <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Test</a></li>
+    </ul>
+  </nav>
+    <section>
+
       <h2>How to fall in love</h2>
       <ol>
          <li>Step 1: Get a shovel.</li> 
